--- a/CodeceptJS/package.json
+++ b/CodeceptJS/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "scripts": {
     "codeceptjs": "npx codeceptjs run --steps",
-    "codeceptjs:ui": "npx codecept-ui --app"
+    "codeceptjs:ui": "npx codecept-ui --app",
+    "codeceptjs:debug": "npx codeceptjs run --steps --verbose"
   },
   "devDependencies": {
     "@codeceptjs/ui": "^1.3.7",
     "codeceptjs": "^3.7.4",
     "puppeteer": "^24.20.0",
-    "puppeteer-core": "^24.20.0"
+    "puppeteer-core": "^24.20.0",
+    "ajv": "^8.17.1",
+    "fs": "^0.0.1-security"
   }
 }
